tests/NormalTests/paczka1/fuzzy1/56279940.err
Error in line 2: SzH A620 50,5
Error in line 3: SzH A621 96,7
Error in line 13: qm16FKjMHDt A621 25,2
Error in line 22: A620 S294 86,48
Error in line 27: KttnflSyA A621 71,0
Error in line 26: A620 S294 230,9
Error in line 30: 521TaRN A564 89,6
